--- a/miniprogram/pages/rank/rank.wxml
+++ b/miniprogram/pages/rank/rank.wxml
@@ -1,39 +1,34 @@
 <!--miniprogram/pages/rank/rank.wxml-->
-<view class="bg-white-yellow" style="width:100vw;height:1000vh">
-<view class="item-box" >
-  <image style="width:100vw;height:51.9vw" src="https://hunger24.cfpa.org.cn/images/rank_logo_final.png"></image>
-<!-- <view  class="text-xl round bg-warm-yellow padding-sm" style="width:50vw; margin-left:auto; margin-right:auto; margin-top:30rpx;margin-bottom:30rpx;text-align:center; ">
-  
-</view>	 -->
-  <!-- 所有项 -->
-  <view class="items">
-		<!-- 每一项 -->
-		<view class="item">
-<view class='inner txt round'>
-				<i>名次</i>
-				<!-- <image class="item-icon" mode="widthFix"></image>
-        <i>用户</i> -->
-        <span class="item-data">
-          <i>能量值</i>
-        </span>
+<view class="bg-white-yellow" style="width:100vw;">
+  <view class="item-box">
+    <image style="width:100vw;height:51.9vw" src="https://hunger24.cfpa.org.cn/images/rank_logo_final.png"></image>
+    <!-- 所有项 -->
+    <view class="items">
+      <!-- 每一项 -->
+      <view class="item">
+        <view class='inner txt round'>
+          <i>名次</i>
+          <span class="item-data">
+            <i>能量值</i>
+          </span>
+        </view>
       </view>
-		</view>
-		<view class="item-list">
-    <view wx:for="{{userRank}}" wx:key="{{index}}" class="item">
-      <view class='inner txt'>
-        <!-- 排名 -->
-        <i>{{index + 1}}</i>
-        <!-- 头像 -->
-        <image class="item-icon" mode="widthFix" src="{{item.userInfo[0].avatarUrl}}"></image>
-        <!-- 名字 -->
-        <i> {{item.userInfo[0].nickName}}</i>
-        <!-- 时间 -->
-        <span class="item-data">
-          <i class="rankpace"> {{item.sum}}</i>
-        </span>
+      <view class="item-list">
+        <view wx:for="{{userRank}}" wx:key="{{index}}" class="item">
+          <view class='inner txt'>
+            <!-- 排名 -->
+            <i>{{index + 1}}</i>
+            <!-- 头像 -->
+            <image class="item-icon" mode="widthFix" src="{{item.userInfo[0].avatarUrl}}"></image>
+            <!-- 名字 -->
+            <i> {{item.userInfo[0].nickName}}</i>
+            <!-- 时间 -->
+            <span class="item-data">
+              <i class="rankpace"> {{item.sum}}</i>
+            </span>
+          </view>
+        </view>
       </view>
-		</view>
-	</view>
+    </view>
   </view>
-</view>
 </view>
