--- a/miniprogram/pages/donation/donation.wxml
+++ b/miniprogram/pages/donation/donation.wxml
@@ -44,8 +44,8 @@
       </view>
       <view class="padding-xl bg-white-yellow">
         <image style="width:80vw; height:66.68vw" src="https://hunger24.cfpa.org.cn/images/certificate.png"></image>
-        <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="saveCertificateToAlbum">保存图片</button>
-        <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="hideModal">再捐一餐</button>
+        <button class="index-button cu-btn round bg-yellow margin-sm" bindtap="saveCertificateToAlbum">保存图片</button>
+        <button class="index-button cu-btn round bg-yellow margin-sm" bindtap="showModal" data-modal-name="pay">再捐一餐</button>
       </view>
     </view>
   </view>
