--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -53,6 +53,8 @@
 			<text>饥饿24公益体验活动由中国扶贫基金会发起，倡导18-60周岁有条件的人在10月16日08:00—10月17日24:00期间，挑战24小时不吃饭，体验饥饿、珍惜粮食、拒绝浪费；并邀请参与人为贫困地区和发展中国家儿童送去关爱。（2020年10月16日是联合国确定的第40个世界粮食日，10月17日是中国第7个扶贫日）\n\n</text>
 			<text class="text-bold">游戏规则：\n</text>
 			<text>1.饥饿时间进度和抗饥饿能量均达到满格后为挑战成功；\n 2.饥饿时间进度用来记录挑战者的饥饿时间，24小时为满格。10月16日8：00 后点击“开始挑战”开启挑战计时；\n 3.抗饥饿能量进度用来记录挑战者的能量值，24个能量为满格；\n 4.挑战者通过挖农作物小游戏来积攒能量，每个挑战者有5个铲子，每邀请一个朋友或者捐一餐，可获得一个新的铲子。报名成功后可随时通过玩游戏开始积攒能量。\n\n</text>
+			<text class="text-bold">挑战成功纸质证书获得方式：\n</text>
+			<text>1.关注微信公众号“全民公益”\n2.后台回复“饥饿24证书”\n3.留下您的微信ID、姓名、地址及联系方式。\n我们将在15个工作日内为您邮寄证书。\n\n</text>
 			<text style="font-size:0.75rem; color:rgb(131,131,131)">温馨提示：\n 1.体验者年龄在18-60周岁，体验饥饿24小时“不进食”的网友必须是身体健康的成年人，有慢性病(如高血压、低血压、糖尿病以及低血糖的人建议不要参与)；\n 2.体验饥饿24小时“不进食”的网友当天必须保证充分的饮水，建议喝2-3升白开水；\n 3.体验饥饿24小时“不进食”的网友当天不能有剧烈的体力运动或辛苦的脑力劳动；\n 4.不建议长期体验饥饿“不进食”的活动；\n 5.请勿在体验活动前后暴饮暴食。</text>
 		</view>
 	</view>
@@ -120,7 +122,7 @@
 </view>
 
 <!-- authorization modal -->
-<!-- <view class="cu-modal {{modalName == 'authorize'? 'show' : ''}}">
+<view class="cu-modal {{modalName == 'authorize'? 'show' : ''}}">
 		<view class="cu-dialog">
 			<view class="cu-bar justify-end bg-white-yellow">
 				<view class="content"></view>
@@ -129,14 +131,13 @@
 				</view>
 			</view>
 			<view class="padding-xl bg-white-yellow">
-				<text>授权是为了在排行榜显示用户昵称和头像，授权后才能开始游戏哦！
+				<text>授权后才能保存图片哦！
 				</text>
-				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="getUserInfo"
-					bindgetuserinfo="getUserInfo">确认授权</button>
+				<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="openSetting">确认授权</button>
 				<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="hideModal">放弃游戏</button>
 			</view>
 		</view>
-	</view> -->
+	</view>
 
 <!-- navigation bar -->
 <view class="navbar" style="width: 100vw; padding-bottom:25rpx;">
